--- a/several levels/Base.lproj/Main.storyboard
+++ b/several levels/Base.lproj/Main.storyboard
@@ -23,9 +23,6 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="deviceRGB"/>
                             </webView>
-                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" fixedFrame="YES" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="k5f-bt-TKN">
-                                <rect key="frame" x="0.0" y="64" width="375" height="2"/>
-                            </progressView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -42,7 +39,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Dg7-XS-ppV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1032.5" y="902.5"/>
+            <point key="canvasLocation" x="937.5" y="902.5"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="VaV-yJ-JHK">
@@ -78,7 +75,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="240" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="aQ6-5k-yml">
-                                <rect key="frame" x="20" y="94" width="335" height="524"/>
+                                <rect key="frame" x="20" y="94" width="335" height="530"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="separatorColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="sectionIndexBackgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
@@ -104,15 +101,25 @@
                                 <color key="textColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <tabBar contentMode="scaleToFill" fixedFrame="YES" barStyle="black" itemPositioning="centered" translatesAutoresizingMaskIntoConstraints="NO" id="Jqf-BC-hS0">
-                                <rect key="frame" x="0.0" y="618" width="375" height="49"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <items>
-                                    <tabBarItem title="tutorials" id="0BM-OC-OOX"/>
-                                    <tabBarItem title="games" id="ggu-UK-BcH"/>
-                                    <tabBarItem title="tech" id="zb1-7f-VJq"/>
-                                </items>
-                            </tabBar>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="40W-st-rxd">
+                                <rect key="frame" x="0.0" y="626" width="375" height="41"/>
+                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GyO-N0-gYT">
+                                <rect key="frame" x="20" y="632" width="90" height="30"/>
+                                <state key="normal" title="tutorials"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mbn-dP-fzJ">
+                                <rect key="frame" x="142" y="632" width="90" height="30"/>
+                                <state key="normal" title="games"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gTh-5e-AWj">
+                                <rect key="frame" x="265" y="632" width="90" height="30"/>
+                                <state key="normal" title="tech"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -123,6 +130,7 @@
                             <constraint firstItem="aQ6-5k-yml" firstAttribute="centerX" secondItem="9wQ-7g-wR1" secondAttribute="centerX" id="aY2-Yf-vo1"/>
                             <constraint firstAttribute="trailingMargin" secondItem="aQ6-5k-yml" secondAttribute="trailing" id="igo-pX-Tyh"/>
                             <constraint firstItem="rnF-jn-s34" firstAttribute="top" secondItem="aQ6-5k-yml" secondAttribute="bottom" constant="57" id="iqs-TX-ayo"/>
+                            <constraint firstItem="rnF-jn-s34" firstAttribute="top" secondItem="aQ6-5k-yml" secondAttribute="bottom" constant="43" id="ohg-QD-iPX"/>
                             <constraint firstItem="rnF-jn-s34" firstAttribute="top" secondItem="aQ6-5k-yml" secondAttribute="bottom" constant="49" id="thb-y2-kxg"/>
                             <constraint firstItem="aQ6-5k-yml" firstAttribute="top" secondItem="zh6-ph-Ti0" secondAttribute="bottom" constant="30" id="u1x-Fr-yax"/>
                             <constraint firstItem="rnF-jn-s34" firstAttribute="top" secondItem="aQ6-5k-yml" secondAttribute="bottom" constant="8" id="uf7-ND-dGH"/>
@@ -133,6 +141,7 @@
                                 <exclude reference="RfI-Cl-sAx"/>
                                 <exclude reference="u1x-Fr-yax"/>
                                 <exclude reference="iqs-TX-ayo"/>
+                                <exclude reference="thb-y2-kxg"/>
                                 <exclude reference="uf7-ND-dGH"/>
                             </mask>
                         </variation>
@@ -140,9 +149,6 @@
                     <navigationItem key="navigationItem" title="several levels" id="ocg-eB-05a"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
-                        <outlet property="navGames" destination="ggu-UK-BcH" id="MKf-qk-oqX"/>
-                        <outlet property="navTech" destination="zb1-7f-VJq" id="IIK-Q1-obI"/>
-                        <outlet property="navTutorials" destination="0BM-OC-OOX" id="bM9-Uk-sE4"/>
                         <outlet property="tableView" destination="aQ6-5k-yml" id="Abt-n1-CtV"/>
                     </connections>
                 </viewController>
