--- a/several levels/Base.lproj/Main.storyboard
+++ b/several levels/Base.lproj/Main.storyboard
@@ -32,6 +32,7 @@
                             <constraint firstItem="63F-n1-vxT" firstAttribute="centerY" secondItem="T2N-Ec-3q4" secondAttribute="centerY" id="i67-zN-wjb"/>
                         </constraints>
                     </view>
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
                         <outlet property="webView" destination="63F-n1-vxT" id="oP1-MU-xkD"/>
@@ -45,6 +46,7 @@
         <scene sceneID="VaV-yJ-JHK">
             <objects>
                 <navigationController id="ZtO-Tv-QIH" sceneMemberID="viewController">
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="4hQ-ur-A35">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -101,44 +103,29 @@
                                 <color key="textColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="40W-st-rxd">
-                                <rect key="frame" x="0.0" y="626" width="375" height="41"/>
-                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GyO-N0-gYT">
-                                <rect key="frame" x="115" y="632" width="70" height="30"/>
-                                <state key="normal" title="tutorials">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="navTutorials:" destination="VUX-pX-wwD" eventType="touchUpInside" id="JsQ-sc-fER"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gTh-5e-AWj">
-                                <rect key="frame" x="285" y="632" width="70" height="30"/>
-                                <state key="normal" title="tech">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mbn-dP-fzJ">
-                                <rect key="frame" x="207" y="632" width="70" height="30"/>
-                                <state key="normal" title="games">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oPe-cr-OgV">
-                                <rect key="frame" x="20" y="632" width="70" height="30"/>
-                                <state key="normal" title="home">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                            </button>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RIe-3V-jSK">
+                                <rect key="frame" x="0.0" y="623" width="375" height="44"/>
+                                <items>
+                                    <barButtonItem width="15" style="plain" systemItem="fixedSpace" id="kiQ-JD-aih"/>
+                                    <barButtonItem title="Item" id="amt-QP-jKh">
+                                        <connections>
+                                            <action selector="navTutorials:" destination="VUX-pX-wwD" id="8NJ-HH-jkc"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem width="42" style="plain" systemItem="fixedSpace" id="F06-fl-frx"/>
+                                    <barButtonItem title="Item" id="Ofw-dr-duy"/>
+                                    <barButtonItem width="42" style="plain" systemItem="fixedSpace" id="A6Y-iQ-DFF"/>
+                                    <barButtonItem title="Item" id="YP7-wN-jHs"/>
+                                    <barButtonItem width="42" style="plain" systemItem="fixedSpace" id="ZOB-KC-w4R"/>
+                                    <barButtonItem title="Item" id="5es-NV-zUW"/>
+                                    <barButtonItem width="38" style="plain" systemItem="fixedSpace" id="V95-kW-a4a"/>
+                                </items>
+                            </toolbar>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="aQ6-5k-yml" firstAttribute="width" secondItem="9wQ-7g-wR1" secondAttribute="height" multiplier="335:667" id="5vH-X2-vwe"/>
+                            <constraint firstItem="BMC-Mh-FE6" firstAttribute="top" secondItem="zh6-ph-Ti0" secondAttribute="bottom" id="9sL-rr-pJP"/>
                             <constraint firstItem="aQ6-5k-yml" firstAttribute="top" secondItem="zh6-ph-Ti0" secondAttribute="bottom" constant="26" id="RfI-Cl-sAx"/>
                             <constraint firstItem="aQ6-5k-yml" firstAttribute="top" secondItem="zh6-ph-Ti0" secondAttribute="bottom" constant="30" id="UAW-5y-Pxi"/>
                             <constraint firstAttribute="leadingMargin" secondItem="aQ6-5k-yml" secondAttribute="leading" id="UdP-Yb-R97"/>
@@ -158,6 +145,7 @@
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
+                                <exclude reference="z2r-fa-EUT"/>
                                 <exclude reference="5vH-X2-vwe"/>
                                 <exclude reference="RfI-Cl-sAx"/>
                                 <exclude reference="u1x-Fr-yax"/>
@@ -170,9 +158,12 @@
                         </variation>
                     </view>
                     <navigationItem key="navigationItem" title="several levels" id="ocg-eB-05a"/>
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
+                        <outlet property="sectionTitle" destination="BMC-Mh-FE6" id="RXW-Xv-nCm"/>
                         <outlet property="tableView" destination="aQ6-5k-yml" id="Abt-n1-CtV"/>
+                        <outlet property="too" destination="RIe-3V-jSK" id="EHx-Xj-OXH"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="F8V-RN-Zl0" userLabel="First Responder" sceneMemberID="firstResponder"/>
