--- a/several levels/Base.lproj/Main.storyboard
+++ b/several levels/Base.lproj/Main.storyboard
@@ -23,6 +23,10 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="deviceRGB"/>
                             </webView>
+                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" fixedFrame="YES" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="PNe-9i-OLZ">
+                                <rect key="frame" x="0.0" y="64" width="375" height="2"/>
+                                <color key="progressTintColor" red="0.0" green="0.75474880582337045" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            </progressView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -35,6 +39,7 @@
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
+                        <outlet property="myProgressView" destination="PNe-9i-OLZ" id="Z8n-Yi-kvr"/>
                         <outlet property="webView" destination="63F-n1-vxT" id="oP1-MU-xkD"/>
                     </connections>
                 </viewController>
@@ -110,7 +115,7 @@
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="2xJ-B4-mfH"/>
                                     <barButtonItem style="plain" id="nbh-J2-8ih">
                                         <segmentedControl key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" segmentControlStyle="bar" selectedSegmentIndex="0" id="EEr-ag-bwL" userLabel="Segmented Navigation">
-                                            <rect key="frame" x="26" y="7" width="331" height="30"/>
+                                            <rect key="frame" x="42" y="7" width="299" height="30"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <segments>
                                                 <segment title="" image="Home"/>
